test/errors/default_values_error/zs/wrong_float_initializer_error.zs
package wrong_float_initializer_error;

struct WrongFloatInitializer
{
    float16 wrongFloatInitializer = "wrong";
};
